--- a/Networking excercise/Get_Nation_Info/app/src/main/res/layout/activity_country_details.xml
+++ b/Networking excercise/Get_Nation_Info/app/src/main/res/layout/activity_country_details.xml
@@ -25,17 +25,21 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:weightSum="3">
+                android:weightSum="10">
 
                 <ImageView
                     android:id="@+id/img"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"/>
+                    android:layout_weight="4"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"></TextView>
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="5"
                     android:orientation="vertical">
                     <TextView
                         android:id="@+id/countryCode"
