Catch double parse error
Catch NumberFormatException when get input from UI

--- a/Networking excercise/Exchange_Rate/app/src/main/res/layout/activity_main.xml
+++ b/Networking excercise/Exchange_Rate/app/src/main/res/layout/activity_main.xml
@@ -5,89 +5,82 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+    <LinearLayout
+        android:id="@+id/currencyLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="30dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:text="From :"
+                android:textSize="15dp"
+                android:layout_weight="1" />
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/spinnerListPre"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:text="To :"
+                android:textSize="15dp"
+                android:layout_weight="1" />
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/spinnerListAfter"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/currencyLayout">
+    <EditText
+        android:id="@+id/inputText"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#E8C0C0C0"
+        android:fontFamily="monospace"
+        android:layout_margin="20dp"
+        android:hint="Input"
+        android:textSize="16dp" />
     <TextView
         android:id="@+id/outputText"
-        android:layout_width="214dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_margin="20dp"
         android:scrollbars="vertical"
         android:textSize="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/convertButton" />
+        tools:layout_editor_absoluteY="227dp" />
 
-    <EditText
-        android:id="@+id/inputText"
-        android:layout_width="180dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="80dp"
-        android:background="#E8C0C0C0"
-        android:fontFamily="monospace"
-        android:gravity="center"
-        android:hint="Input"
-        android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerListPre"
-        tools:ignore="MissingConstraints" />
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/convertButton"
-        android:layout_width="80dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="264dp"
-        android:layout_marginTop="40dp"
-        android:background="#2e64bc"
-        android:onClick="convert"
-        android:text="Convert"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/inputText"
-        tools:ignore="MissingConstraints" />
 
-    <androidx.appcompat.widget.AppCompatSpinner
-        android:id="@+id/spinnerListPre"
-        android:layout_width="260dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="44dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <androidx.appcompat.widget.AppCompatSpinner
-        android:id="@+id/spinnerListAfter"
-        android:layout_width="260dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="8dp"
-        android:text="To :"
-        android:textSize="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerListPre"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="16dp"
-        android:text="From :"
-        android:textSize="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
