--- a/Networking excercise/Exchange_Rate/app/src/main/res/layout/activity_main.xml
+++ b/Networking excercise/Exchange_Rate/app/src/main/res/layout/activity_main.xml
@@ -57,26 +57,29 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/currencyLayout">
-    <EditText
-        android:id="@+id/inputText"
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#E8C0C0C0"
-        android:fontFamily="monospace"
-        android:layout_margin="20dp"
-        android:hint="Input"
-        android:textSize="16dp" />
-    <TextView
-        android:id="@+id/outputText"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_margin="20dp"
-        android:scrollbars="vertical"
-        android:textSize="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="227dp" />
+
+        <EditText
+            android:id="@+id/inputText"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="20dp"
+            android:layout_weight="1"
+            android:background="#E8C8F4DE"
+            android:fontFamily="monospace"
+            android:hint="Input"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/outputText"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="20dp"
+            android:layout_weight="1"
+            android:background="#FFFFFF"
+            android:scrollbars="vertical"
+            android:textSize="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            tools:layout_editor_absoluteY="227dp" />
 
     </LinearLayout>
 
