--- a/Networking excercise/Exchange_Rate/app/src/main/res/layout/activity_main.xml
+++ b/Networking excercise/Exchange_Rate/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/inputAndResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -82,6 +83,24 @@
             tools:layout_editor_absoluteY="227dp" />
 
     </LinearLayout>
+    <Button
+        android:id="@+id/record"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@+id/inputAndResult"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Temporary save">
+
+    </Button>
+
+    <TextView
+        android:id="@+id/history"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/record"
+        android:scrollbars = "vertical"/>
+
+
 
 
 
